daniel_masero/session01/exercise-03/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: wordpress
   namespace: exercise-03
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image:  bitnami/wordpress:latest
        name: wordpress
        ports:
          - name: http-server
            containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: http-server
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 30
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: http-server
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 30
          periodSeconds: 20
