daniel_masero/session01/exercise-03/rds-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: rds
  namespace: exercise-03
spec:
  type: ExternalName
  externalName: kubernetes-training.cfxyxg2jnovx.us-east-1.rds.amazonaws.com
